--- a/app/src/main/res/layout/activity_dynamic.xml
+++ b/app/src/main/res/layout/activity_dynamic.xml
@@ -2,63 +2,71 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <LinearLayout
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="#f1f1f1"
         android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#ffffff"
             android:orientation="vertical">
+
             <EditText
                 android:id="@+id/myMessage"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
+                android:layout_margin="15dp"
                 android:background="@null"
-                android:hint="总想说点什么..."
                 android:gravity="top"
-                android:layout_margin="15dp"/>
+                android:hint="总想说点什么..." />
+
             <ImageView
                 android:id="@+id/chooseImg"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/fir"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginBottom="15dp"
                 android:layout_marginLeft="15dp"
-                android:layout_marginBottom="15dp"/>
+                android:src="@mipmap/add_img" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:gravity="center">
+
             <Button
                 android:id="@+id/send"
-                android:layout_width="100dp"
-                android:layout_height="30dp"
+                android:layout_width="150dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:background="@drawable/shape_corner"
                 android:text="发布"
                 android:textColor="#ffffff" />
         </LinearLayout>
+
         <LinearLayout
-            android:layout_height="match_parent"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical">
+
             <Button
                 android:id="@+id/cancle"
-                android:layout_width="50dp"
+                android:layout_width="55dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
                 android:background="@mipmap/back"
-                android:text="取消"
                 android:textColor="#ffffff" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="返回"
-                android:textSize="15sp"/>
+                android:textSize="15sp" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
