--- a/app/src/main/res/layout/chi_fragment_share.xml
+++ b/app/src/main/res/layout/chi_fragment_share.xml
@@ -19,9 +19,10 @@
             android:layout_gravity="bottom"
             android:layout_margin="5dp">
             <ImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:src="@mipmap/icon_tem" />
+                android:id="@+id/bt_share"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:src="@mipmap/fs"/>
         </LinearLayout>
     </FrameLayout>
 </FrameLayout>
