--- a/app/src/main/res/layout/item_share.xml
+++ b/app/src/main/res/layout/item_share.xml
@@ -10,9 +10,11 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="10dp" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -54,22 +56,46 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/share_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text=""
-            android:layout_margin="5dp"/>
-        <ImageView
-            android:id="@+id/share_pic"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/fir"
-            android:layout_margin="10dp"/>
+            android:layout_margin="5dp"
+            android:text="" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/share_pic"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_margin="10dp"
+                android:src="@drawable/fir" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_margin="10dp"
+                android:gravity="right">
+
+                <ImageView
+                    android:id="@+id/like"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@mipmap/like"
+                    android:clickable="true"/>
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 
 
