--- a/app/src/main/res/layout/index_activity.xml
+++ b/app/src/main/res/layout/index_activity.xml
@@ -2,4 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/first_page"/>
+    android:background="@mipmap/first_page">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right">
+        <LinearLayout
+            android:layout_width="80dp"
+            android:layout_height="35dp"
+            android:background="@drawable/djs"
+            android:layout_margin="20dp"
+            android:gravity="center">
+            <TextView
+                android:id="@+id/djs"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="3 s"
+                android:textColor="#f2f2f2"
+                android:textSize="20sp"/>
+        </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
