--- a/app/src/main/res/layout/item_share.xml
+++ b/app/src/main/res/layout/item_share.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:descendantFocusability="blocksDescendants">
 
     <View
         android:layout_width="match_parent"
@@ -92,8 +93,7 @@
                     android:id="@+id/like"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:src="@mipmap/like"
-                    android:clickable="true"/>
+                    android:src="@mipmap/like"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
