--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/img_1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/background"
@@ -21,6 +22,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/img_2"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_gravity="center"
